@@ -1,0 +1,16 @@
+<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
+<html>
+<head>
+<link rel="stylesheet" href="../resources/js-test-style.css">
+<script src="../resources/js-test-pre.js"></script>
+</head>
+<body>
+<p id="description"></p>
+<div id="console"></div>
+<script>
+description("KDE JS Test");
+</script>
+<script src="resources/Date-setYear.js"></script>
+<script src="../resources/js-test-post.js"></script>
+</body>
+</html>
