@@ -1,3 +1,15 @@
+2006-07-24  Rob Buis  <buis@kde.org>
+
+        Reviewed by Darin.
+
+        http://bugzilla.opendarwin.org/show_bug.cgi?id=5257
+        setYear() does not match FireFox/IE behavior
+
+        Make sure the right values end up in tm_year.
+
+        * kjs/date_object.cpp:
+        (KJS::formatTime):
+
 2006-07-23  Mark Rowe  <opendarwin.org@bdash.net.nz>
 
         Reviewed by Maciej.
